--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 $green: #12e177;
 $orange: #ffc72a;
 $blue: #4c43d4;
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
   background-color: $blue;
   color: #fff;
   padding: 0;
